--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adx-csd-mapper",
   "version": "0.2.0",
-  "description": "Maps orgUits in an ADX message to an alternate ID looked up in a CSD InfoManager",
+  "description": "Maps orgUnits in an ADX message to an alternate ID looked up in a CSD InfoManager",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
