--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "tap --cov tests.js"
+    "test": "tap --cov -t 10 tests.js",
+    "view-cov": "tap --cov -t 10 --coverage-report=html tests.js"
   },
   "engines": {
     "node": ">=4"
